# libft_2.0

./: .gitignore  CMakeLists.txt  Makefile
include/libft/: ft_getopt.h  libft.h
src/: ft_atof.c  ft_atoi.c  ft_atoll_checked.c  ft_getopt.c  ft_isdigit.c  ft_isspace.c  ft_memcpy.c  ft_memset.c  ft_putchar_fd.c  ft_puthex_fd.c  ft_putptr_fd.c  ft_putsize_fd.c  ft_putstr_fd.c  ft_sqrt.c  ft_str_is_double.c  ft_str_is_number.c  ft_strchr.c  ft_strcmp.c  ft_strlen.c  ft_strncmp.c  ft_strtol.c
tests/: test_main.c
